# serviceops-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py
data_pipeline/: __init__.py  build_eval_sets.py  build_manual_holdout.py  build_router_sft.py  build_verifier_sft.py  common.py  dataset_stats.py  generate_synthetic_tickets.py  write_v1_reports.py
reports/: adapter_validation.md  architecture.md  architecture_cn.md  dataset_stats.md  e2e_lora_integration.md  end_to_end_eval.md  end_to_end_eval_details.jsonl  end_to_end_eval_results.jsonl  failure_analysis.md  failure_analysis_details.jsonl  final_project_summary.md  hard_end_to_end_eval_details.jsonl  hard_failure_analysis_details.jsonl  local_lora_e2e_small.md  local_lora_e2e_small_results.jsonl  local_lora_smoke_test.md  local_model_check.md  local_runtime.md  manual_e2e_eval_results.jsonl  manual_end_to_end_eval_details.jsonl  manual_failure_analysis_details.jsonl  manual_holdout_report.md  manual_holdout_router_report.md  manual_holdout_verifier_report.md  manual_router_eval_rule.jsonl  manual_router_eval_summary.jsonl  manual_verifier_eval_prompt.jsonl  manual_verifier_eval_summary.jsonl  rag_ablation.md  rag_eval_details.jsonl  rag_eval_hash.jsonl  router_eval_prompt.jsonl  router_eval_results.jsonl  router_eval_summary.jsonl  router_sft_report.md  verifier_eval_prompt.jsonl  verifier_eval_results.jsonl  verifier_eval_summary.jsonl  verifier_sft_report.md
scripts/: check_local_model.sh  check_project_ready.sh  gpu_train_router.sh  (+10 more)
(+97 files in other folders)
